# cinepolis-reserve-system

./: .env.example  README.md  manage.py  pyproject.toml
accounts/: urls.py
accounts/models/: __init__.py  user.py
accounts/serializers/: __init__.py  register_serializer.py  user_serializer.py
accounts/views/: __init__.py  login.py  register.py
cinema/: tasks.py  urls.py
cinema/migrations/: 0001_initial.py  0002_remove_seat_code_remove_session_end.py  0003_ticket.py  0004_ticket_session_alter_seat_status.py  0005_remove_seat_status.py
cinema/models/: __init__.py  movie.py  room.py  seat.py  session.py  ticket.py
cinema/serializers/: __init__.py  movie_serializer.py  movie_session_seats_serializer.py  room_serializer.py  seat_serializer.py  session_serializer.py  ticket_serializer.py
cinema/views/: __init__.py  movie_views.py  seat_per_session_view.py  seat_views.py  session_views.py  ticket_views.py
core/: celery.py  settings.py  urls.py  wsgi.py
source/accounts/: urls.py
source/accounts/migrations/: 0001_initial.py
source/accounts/models/: __init__.py  user.py
source/accounts/views/: __init__.py  register.py
